--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,27 +2,27 @@ name: 自動測試與部署
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   test-and-deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: 📥 下載程式碼
-      uses: actions/checkout@v3
-    
-    - name: 🔍 檢查 HTML/CSS 語法
-      uses: Cyb3r-Jak3/html5-validator-action@v7.2.0
-      with:
-        root: ./
-        css: true
-    
-    - name: 🚀 部署到 GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      if: github.ref == 'refs/heads/main'
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./
+      - name: 📥 下載程式碼
+        uses: actions/checkout@v3
+
+      - name: 🔍 檢查 HTML 語法
+        uses: Cyb3r-Jak3/html5-validator-action@v7.2.0
+        with:
+          root: .
+        continue-on-error: true
+
+      - name: 🚀 部署到 GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        if: github.ref == 'refs/heads/main'
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./
